--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,30 +1,65 @@
 {
-  "background_color": "#fff",
+  "short_name": "X7finance",
+  "name": "X7 Finance",
+  "description": "Swap, Borrow, and Lend on the X7 Finance Xchange",
+  "start_url": "/#/swap",
   "display": "standalone",
-  "homepage_url": "https://app.uniswap.org",
+  "theme_color": "#000000",
+  "background_color": "#000000",
+  "homepage_url": "https://app.x7.finance/#/swap",
   "providedBy": {
-    "name": "Uniswap",
-    "url": "https://uniswap.org"
+    "name": "X7 Finance",
+    "url": "https://x7.finance"
   },
   "icons": [
     {
-      "src": "./images/192x192_App_Icon.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "src": "./images/icons/apple-touch-icon-57x57.png",
+      "sizes": "57x57",
+      "type": "image/png"
     },
     {
-      "src": "./images/512x512_App_Icon.png",
-      "sizes": "512x512",
+      "src": "./images/apple-touch-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/apple-touch-icon-114x114.png",
+      "sizes": "114x114",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/apple-touch-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/favicon-196x196.png",
+      "sizes": "196x196",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/apple-touch-icon-57x57.png",
+      "sizes": "57x57",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
+    },
+    {
+      "src": "./images/apple-touch-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "./images/apple-touch-icon-114x114.png",
+      "sizes": "114x114",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "./images/apple-touch-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "maskable"
     }
-  ],
-  "orientation": "portrait",
-  "name": "Uniswap",
-  "description": "Swap or provide liquidity on the Uniswap Protocol",
-  "iconPath": "./images/256x256_App_Icon_Pink.svg",
-  "short_name": "Uniswap",
-  "start_url": ".",
-  "theme_color": "#FC72FF"
+  ]
 }
